<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    android:background="#3C4043">

    <Button
        android:id="@+id/button3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="296dp"
        android:background="#3C4043"
        android:text="@string/nine"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="#3C4043"
        android:text="@string/five"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:background="#3C4043"
        android:text="@string/six"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="35dp"
        android:background="#3C4043"
        android:text="@string/one"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="#3C4043"
        android:text="@string/two"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:background="#3C4043"
        android:text="@string/three"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button10"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="296dp"
        android:background="#3C4043"
        android:text="@string/seven"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="296dp"
        android:background="#3C4043"
        android:text="@string/eight"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="35dp"
        android:background="#3C4043"
        android:text="@string/four"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button13"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#3C4043"
        android:text="@string/zero"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button14"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="35dp"
        android:background="#3C4043"
        android:text="@string/decimal"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button16"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#3C4043"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button17"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#3C4043"
        android:text="@string/multiply"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button18"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#3C4043"
        android:text="@string/subtract"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button19"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:background="#3C4043"
        android:text="@string/equals"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button20"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#3C4043"
        android:text="@string/divide"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button21"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:background="#3C4043"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button18"
        app:layout_constraintStart_toStartOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:paddingRight="50dp"
        android:text="@string/zero"
        android:textAlignment="viewEnd"
        android:gravity="end|bottom"
        android:paddingBottom="30dp"
        android:textSize="48sp"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp"
       android:background="@android:color/white"/>
</android.support.constraint.ConstraintLayout>